stop overflow body v2

--- a/src/styles.styl
+++ b/src/styles.styl
@@ -1,3 +1,6 @@
-body{
-  overflow-x:hidden;
+html,
+body {
+  position: relative;
+  height: 100%;
+  overflow: hidden;
 }
